--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Hello, It's Me,</h3>
             <h1>Nishu Tiwari,</h1>
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p> Hi, My name is Nishu Tiwari, I'm a front-end developer, I builds the front-end portion of websites and web applications-the part users see and interact with. I creates websites and applications using web languages such as HTML/ CSS/ JavaScript/ Wordpress/  Bootstrap/ Reactjs, that allow users to access and interact with site or app. My interest are in front-end development, and I love to create beautiful and performant websites and web applications with delightful user experiences.</p>
+            <p> Hi, My name is Nishu Tiwari, I'm a Web Developer, I builds the front-end portion of websites and web applications-the part users see and interact with. I creates websites and applications using web languages such as HTML/ CSS/ JavaScript/ Wordpress/  Bootstrap/ Reactjs, that allow users to access and interact with site or app. My interest are in front-end development, and I love to create beautiful and performant websites and web applications with delightful user experiences.</p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
@@ -43,7 +43,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About,<span>Me,</span></h2>
-            <h3>Frontend Developer!</h3>
+            <h3>Web Developer!</h3>
             <p>My name is Nishu Tiwari, I'm from Sultanpur ,Uttarpradesh, I completed my Schooling from Shemford futuristic school Sultanpur, and now I'm persuing Graduation from RMLAU Sultanpur, I'm a Frontend Developer, I builds the front-end portion of websites and web applications by using web languages such as HTML, CSS,  JavaScript, Wordpress, Bootstrap and Reactjs.</p>
             <a href="#" class="btn">Read More</a>
         </div>
